@@ -23,6 +23,7 @@ Engine fixes:
 * Fix Windows-style paths with backslashes not working on non-Windows systems.
 * Prevent allies counting as attack targets when using mouse movement.
 * Fix needing to press the 'Cancel' key twice to exit the vendor menu.
+* Fix unintended key presses being registered when quitting the game via an OS keyboard shortcut.
 
 Game updates:
 
